--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "@slack/web-api": "^6.9.0"
+    "@slack/web-api": "^6.9.0",
+    "axios": "^1.5.1",
+    "google-auth-library": "^9.0.0"
   }
 }
